--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "VoiceMozilla counterpart adaptation by Dream Team",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,9 +21,15 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "googleapis": "^39.2.0",
+    "mongodb": "^3.5.4",
+    "mongoose": "^5.9.3",
+    "multer": "^1.4.2"
   }
 }
