--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.3",
     "multer": "^1.4.2"
