--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "@google-cloud/storage": "^4.6.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
+    "fast-crc32c": "^2.0.0",
     "googleapis": "^39.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.4",
